--- a/build.xml
+++ b/build.xml
@@ -1,36 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-** This is a template build file for a JOSM  plugin.
-**
-** Maintaining versions
-** ====================
-** See README.template
-**
-** Usage
-** =====
-** Call "ant help" to get possible build targets.
-**
--->
-<project name="myPluginName" default="dist" basedir=".">
-
+<project name="gson" default="dist" basedir=".">
     <!-- enter the SVN commit message -->
     <property name="commit.message" value="Commit message"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
     <property name="plugin.main.version" value="7001"/>
 
-    <!-- Configure these properties (replace "..." accordingly).
-         See http://josm.openstreetmap.de/wiki/DevelopersGuide/DevelopingPlugins
-    -->
-    <property name="plugin.author" value="..."/>
-    <property name="plugin.class" value="..."/>
-    <property name="plugin.description" value="..."/>
-    <property name="plugin.icon" value="..."/>
-    <property name="plugin.link" value="..."/>
-    <!--<property name="plugin.early" value="..."/>-->
-    <!--<property name="plugin.requires" value="..."/>-->
-    <!--<property name="plugin.stage" value="..."/>-->
+    <property name="plugin.author" value="Don-vip"/>
+    <property name="plugin.class" value="org.openstreetmap.josm.plugins.gson.GsonPlugin"/>
+    <property name="plugin.description" value="Provides the GSON library for other JOSM plugins. Not meant to be installed directly by users, but rather as a dependency for other plugins."/>
+    <property name="plugin.canloadatruntime" value="true"/>
+    <property name="plugin.stage" value="15"/>
 
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>
-  
+
 </project>
